# fs_prototype

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.cpp
input/npuzzle_5_200_1/: npuzzle_5_200_1.csv
input/npuzzle_5_200_2/: npuzzle_5_200_2.csv
input/npuzzle_5_200_3/: npuzzle_5_200_3.csv
input/npuzzle_5_200_4/: npuzzle_5_200_4.csv
input/npuzzle_5_200_5/: npuzzle_5_200_5.csv
input/tsp_15_100_1/: tsp_15_100_1.csv
input/tsp_15_100_2/: tsp_15_100_2.csv
input/tsp_15_100_3/: tsp_15_100_3.csv
input/tsp_15_100_4/: tsp_15_100_4.csv
input/tsp_15_100_5/: tsp_15_100_5.csv
input/tsp_20_100_1/: tsp_20_100_1.csv
input/tsp_20_100_2/: tsp_20_100_2.csv
input/tsp_20_100_3/: tsp_20_100_3.csv
input/tsp_20_100_4/: tsp_20_100_4.csv
input/tsp_20_100_5/: tsp_20_100_5.csv
input/tsp_30_100_1/: tsp_30_100_1.csv
input/tsp_30_100_2/: tsp_30_100_2.csv
input/tsp_30_100_3/: tsp_30_100_3.csv
input/tsp_30_100_4/: tsp_30_100_4.csv
input/tsp_30_100_5/: tsp_30_100_5.csv
result/: log.csv  result.csv
result/npuzzle_5_100_1/2/: log.csv  result.csv
src/: focal_search.cpp  focal_search.h  focal_search_v2.h  game_board.cpp  game_board.h  heuristics.cpp  heuristics.h  nth_puzzle.cpp  nth_puzzle.h  utils.cpp  utils.h
src/problem/: Problem.cpp  Problem.h  game_board.cpp  game_board.h  heuristics.cpp  heuristics.h  pancake.h  tsp_board.cpp  tsp_board.h
src/search/: BoundedFocalSearch.cpp  BoundedFocalSearch.h  DistanceToGoFocalSearch.h  PotentialFocalSearch.cpp  PotentialFocalSearch.h  ProbabilityFocalSearch.h  RWFocalSearch.cpp  RWFocalSearch.h  focal_search.cpp  focal_search.h  generalizedVersion.h  utils.cpp  utils.h
src/tests/: hello_test.cc
